<resources>
    <string name="app_name">Headphones</string>
    <string name="noise_cancel">NOISE CANCEL</string>
    <string name="control_off">OFF</string>

    <string name="awareness">AMBIENT AWARENESS</string>
    <string name="highView">HIGH</string>
    <string name="mediumView">MEDIUM</string>
    <string name="lowView">LOW</string>

    <string name="text_smart_ambient">Smart\nAmbient</string>
    <string name="title_eq">EQ</string>
    <string name="text_auto_off">Auto-off</string>

    <string name="dialog_message_create_my_own_eq">Currently no EQ created \nTap below button to create one</string>
    <string name="title_eq_edit">Edit EQ</string>
    <string name="eq_add_first_time_tip">Tap the line to add\nand move a knob</string>
    <string name="create_eq_default_name">My EQ</string>
    <string name="eq_off_name_text">Off</string>

    <string name="deviceName">JBL Device</string>
    <string name="text_settings">Settings</string>
    <string name="firmware">Firmware</string>
    <string name="text_smart_button">Programmable Smart Button</string>
    <string name="text_auto_off_feature">Auto Off Feature</string>
    <string name="text_voice_prompt">Enable Voice Prompt</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="eula">EULA</string>
    <string name="harman_privacy_policy">Harman Privacy Statement</string>


    <string name="true_note">TruNote</string>
    <string name="user_manual">User manual</string>
    <string name="updating">Updating&#8230;</string>
    <string name="text_ota_title">Product software update</string>
    <string name="firmware_is_updating">Firmware is Updating…\n1.Please do not close the application.\n2.Keep the headset near the device.\n3.Pluggin in the headphones is recommended.</string>
    <string name="firmware_new_version">New software update version 2.0.0 is available</string>
    <string name="firmware_is_installed">Firmware version 2.0.0 is installed</string>
    <string name="done">Done</string>
</resources>
