<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray_theme"
    android:keepScreenOn="true"
    android:splitMotionEvents="false"
    android:windowEnableSplitTouch="false">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:padding="10dp"
        android:src="@mipmap/ic_back"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/text_ota_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ota_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/updateStatus"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="105dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/firmware_is_updating"
        android:textColor="@android:color/black"
        android:textSize="@dimen/ota_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/startupdating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1">

        <FrameLayout
            android:id="@+id/mainCircle"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/curve_shape_with_gray_border"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtPrecentage"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="0 %"
                android:textStyle="bold"
                android:visibility="visible" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/button_done"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="47dp"
        android:textAlignment="center"
        android:background="@drawable/rectangle_with_round_corner_grey"
        android:paddingBottom="7dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="7dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>
